refine: WorkItemsMigrationCustomizer cosmetics from #229 review
Replace Arrays.asList with List.of in customize(); update test to use a
representative non-db/migration path rather than the old removed default.

Closes #232
Refs #233, #229